--- a/notebooks/LLM-AUT-Scoring.ipynb
+++ b/notebooks/LLM-AUT-Scoring.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "-OQATof8uF9i"
       },
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "gXJKsguRuF9j"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "XuJkzO-NuF9k",
         "outputId": "4a915c3b-8f87-45dd-c448-5776bc6d1845"
@@ -86,7 +86,7 @@
               "1.3"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "KQ-D4lv3uF9k",
         "outputId": "9f388c42-a8f2-47f9-8de9-bffe19eac186"
@@ -118,7 +118,7 @@
               "3.0"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "lpZoKo8GuF9m",
         "outputId": "206ddc51-1288-486d-dee6-5252df78ef9e"
@@ -241,7 +241,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1/1 [00:00<00:00,  8.02it/s]\n"
+            "100%|██████████| 1/1 [00:00<00:00,  5.16it/s]\n"
           ]
         },
         {
@@ -250,7 +250,7 @@
               "[1.5, 3.3]"
             ]
           },
-          "execution_count": 127,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "6psVEojluF9m",
         "outputId": "6feb5cd1-2096-4dcf-9b6b-acf5b134d225"
@@ -322,7 +322,7 @@
               "1   rope  dip the end in sugar and use to lure a raccoon..."
             ]
           },
-          "execution_count": 12,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "ieBwOuuYuF9n",
         "outputId": "a7060207-5812-4abc-8902-db90cc5ce01a"
@@ -355,24 +355,84 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1/1 [00:02<00:00,  2.41s/it]\n"
+            "100%|██████████| 1/1 [00:00<00:00,  4.42it/s]\n"
           ]
         },
         {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>prompt</th>\n",
+              "      <th>response</th>\n",
+              "      <th>scores</th>\n",
+              "      <th>model</th>\n",
+              "      <th>timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>brick</td>\n",
+              "      <td>use as a paperweight</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>davinci</td>\n",
+              "      <td>1.666815e+09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rope</td>\n",
+              "      <td>dip the end in sugar and use to lure a raccoon...</td>\n",
+              "      <td>4.1</td>\n",
+              "      <td>davinci</td>\n",
+              "      <td>1.666815e+09</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "[1.5, 4.1]"
+              "  prompt                                           response  scores    model  \\\n",
+              "0  brick                               use as a paperweight     1.5  davinci   \n",
+              "1   rope  dip the end in sugar and use to lure a raccoon...     4.1  davinci   \n",
+              "\n",
+              "      timestamp  \n",
+              "0  1.666815e+09  \n",
+              "1  1.666815e+09  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df['scores'] = scorer.originality_batch(df.prompt, df.response, model='davinci')\n",
+        "df['scores'] = scorer.originality_batch(df.prompt, df.response, model='babbage')\n",
         "df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
