start offloading gpt scoring to ocsai library

--- a/notebooks/LLM-AUT-Scoring.ipynb
+++ b/notebooks/LLM-AUT-Scoring.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "*To run this code, use the play buttons to the left of the code cells/*\n",
         "\n",
-        "First, install the OCS library and import it."
+        "First, install the *ocsai* library."
       ]
     },
     {
@@ -31,8 +31,16 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -qq Open-Creativity-Scoring\n",
-        "import open_scoring as ocs"
+        "!pip install git+https://www.github.com/massive-texts/ocsai"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from ocsai.inference import GPT_Classic_Scorer"
       ]
     },
     {
@@ -49,18 +57,16 @@
         "\n",
         "1. Sign up for an [account with openai.com](https://beta.openai.com/signup), and link a payment method. You can set a hard-limit on spending, if need be.\n",
         "2. Make an API Key here: https://beta.openai.com/account/api-keys\n",
-        "3. Run the code below, and paste your API key when prompted."
+        "3. Run the code below, and paste your API key when prompted (or set it to OPENAI_API_KEY env variable.)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 2,
-      "metadata": {
-        "id": "gXJKsguRuF9j"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "scorer = ocs.scoring.GPT_Scorer()"
+        "scorer = GPT_Classic_Scorer()"
       ]
     },
     {
@@ -106,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 27,
       "metadata": {
         "id": "KQ-D4lv3uF9k",
         "outputId": "9f388c42-a8f2-47f9-8de9-bffe19eac186"
@@ -118,7 +124,7 @@
               "3.0"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -140,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "GrSZ_gJPuF9l",
         "outputId": "f24c8c80-06ab-4001-faa3-73636572cea8"
@@ -152,7 +158,7 @@
               "['ada', 'babbage', 'curie', 'davinci']"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -172,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "_JTXKzhBuF9l",
         "outputId": "56cecd16-9a67-4102-d469-2ac91f662e65"
@@ -184,7 +190,7 @@
               "3.0"
             ]
           },
-          "execution_count": 125,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -231,18 +237,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 22,
       "metadata": {
         "id": "lpZoKo8GuF9m",
         "outputId": "206ddc51-1288-486d-dee6-5252df78ef9e"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 1/1 [00:00<00:00,  5.16it/s]\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "913d7d4521ba48b3b91706e39dcfdabc",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/1 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "data": {
@@ -250,7 +263,7 @@
               "[1.5, 3.3]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -345,18 +358,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 24,
       "metadata": {
         "id": "ieBwOuuYuF9n",
         "outputId": "a7060207-5812-4abc-8902-db90cc5ce01a"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 1/1 [00:00<00:00,  4.42it/s]\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8db64f57ae6c474fa68d7ea257363cc6",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/1 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "data": {
@@ -382,8 +402,6 @@
               "      <th>prompt</th>\n",
               "      <th>response</th>\n",
               "      <th>scores</th>\n",
-              "      <th>model</th>\n",
-              "      <th>timestamp</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -392,32 +410,24 @@
               "      <td>brick</td>\n",
               "      <td>use as a paperweight</td>\n",
               "      <td>1.5</td>\n",
-              "      <td>davinci</td>\n",
-              "      <td>1.666815e+09</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>rope</td>\n",
               "      <td>dip the end in sugar and use to lure a raccoon...</td>\n",
               "      <td>4.1</td>\n",
-              "      <td>davinci</td>\n",
-              "      <td>1.666815e+09</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  prompt                                           response  scores    model  \\\n",
-              "0  brick                               use as a paperweight     1.5  davinci   \n",
-              "1   rope  dip the end in sugar and use to lure a raccoon...     4.1  davinci   \n",
-              "\n",
-              "      timestamp  \n",
-              "0  1.666815e+09  \n",
-              "1  1.666815e+09  "
+              "  prompt                                           response  scores\n",
+              "0  brick                               use as a paperweight     1.5\n",
+              "1   rope  dip the end in sugar and use to lure a raccoon...     4.1"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -426,13 +436,6 @@
         "df['scores'] = scorer.originality_batch(df.prompt, df.response, model='babbage')\n",
         "df"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -455,7 +458,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.9.18"
     },
     "vscode": {
       "interpreter": {
